[package]
name = "ecc-secp256k1"
version = "0.1.0"
authors = ["Elichai Turkel <elichai.turkel@gmail.com>"]
edition = "2018"


[lib]
crate-type = ["staticlib"]

[dependencies]
rug = { version = "1.3", default-features = false, features = ["integer"] } # GMP - Big Integers
sha2 = "0.8.0"

[dev-dependencies]
secp256k1 = { version = "0.12.2", features = ["rand" ] }
#numext-fixed-uint = "0.1.4"
rustc-hex = "2"

# [profile.release]
# lto = true

[build-dependencies]
# cbindgen = "0.8" Replace back after https://github.com/eqrion/cbindgen/pull/363 Is merged.
cbindgen = { version = "0.8", git = "https://github.com/elichai/cbindgen.git", branch = "features", default-features = false}

[features]
ffi = []
