[package]
name = "ecc-secp256k1"
version = "0.2.0"
authors = ["Elichai Turkel <elichai.turkel@gmail.com>"]
edition = "2018"


[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
rug = { version = "=1.4.0", default-features = false, features = ["integer"] } # GMP - Big Integers

[dev-dependencies]
secp256k1 = { version = "0.12.2", features = ["rand" ] }
#numext-fixed-uint = "0.1.4"
rustc-hex = "2"


[features]
nightly = []
generate-ffi = []

[profile.bench]
opt-level = 3
debug = false
lto = true
debug-assertions = false
codegen-units = 1
overflow-checks = false
