[package]
name = "ecc-secp256k1"
version = "0.2.0"
authors = ["Elichai Turkel <elichai.turkel@gmail.com>"]
edition = "2018"


[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
num-bigint = "0.4"
num-integer = "0.1"
num-traits = "0.2"
[dev-dependencies]
secp256k1 = { version = "0.22", features = ["rand-std", "global-context" ] }
#numext-fixed-uint = "0.1.4"
rustc-hex = "2"
criterion = "0.3"

[[bench]]
name = "bench"
harness = false

[profile.release]
debug = true
lto = true
debug-assertions = false
overflow-checks = false

[features]
nightly = []
generate-ffi = []

[profile.bench]
opt-level = 3
debug = false
lto = true
debug-assertions = false
codegen-units = 1
overflow-checks = false
